--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "auth": "^1.0.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.8.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "prisma": "^5.8.1"
