--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,5 +25,6 @@
   },
   "devDependencies": {
     "prisma": "^5.8.1"
-  }
+  },
+
 }
