--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next-build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,6 +25,5 @@
   },
   "devDependencies": {
     "prisma": "^5.8.1"
-  },
-
+  }
 }
