--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "starter",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "npx prisma generate && next build",
