--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "starter",
+  "name": "null",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "16.20.2"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "npx prisma generate && next build",
